<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_show_review"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/background_grey_8_16dp_rectangle"
        android:gravity="center"
        android:text="@string/show_review"
        android:textColor="@color/PrimaryBlue"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_finish_response"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/background_grey_8_16dp_rectangle"
        android:gravity="center"
        android:text="@string/finish_response"
        android:textColor="@color/PrimaryBlue"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_delete_response"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_grey_8_16dp_rectangle"
        android:gravity="center"
        android:text="@string/delete_response"
        android:textColor="@color/Red"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_finish_response" />
</androidx.constraintlayout.widget.ConstraintLayout>