<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_default_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/car_title"
        android:textColor="@color/grey_4"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <TextView
        android:id="@+id/tv_set_car_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/set_car_title"
        android:textColor="@color/grey_4"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <EditText
        android:id="@+id/et_car_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_grey_8_5dp_rectangle"
        android:hint="@string/title"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:paddingVertical="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="44dp"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/tv_set_car_title" />

    <ImageView
        android:id="@+id/iv_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:src="@drawable/ic_close_16"
        android:tint="@color/grey_4"
        app:layout_constraintBottom_toBottomOf="@id/et_car_title"
        app:layout_constraintEnd_toEndOf="@id/et_car_title"
        app:layout_constraintTop_toTopOf="@id/et_car_title" />

    <Button
        android:id="@+id/btn_save"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/et_car_title" />
</androidx.constraintlayout.widget.ConstraintLayout>