<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_default_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_recovery"
        android:textColor="@color/grey_2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_back" />

    <TextView
        android:id="@+id/lbl_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/new_password"
        android:textColor="@color/grey_2"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_grey_8_12dp_rectangle"
        android:translationZ="-1dp"
        app:layout_constraintBottom_toBottomOf="@id/password2"
        app:layout_constraintTop_toTopOf="@id/password1" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/grey_8"
        android:drawableStart="@drawable/ic_default_password"
        android:drawablePadding="12dp"
        android:ellipsize="end"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="48dp"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/lbl_new_password" />

    <ImageButton
        android:id="@+id/visibility"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_login_invisible_password"
        app:layout_constraintBottom_toBottomOf="@id/password1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/password1" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password1"
        android:backgroundTint="@color/grey_8"
        android:ellipsize="end"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="58dp"
        android:paddingEnd="48dp"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/password1"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grey_6"
        app:layout_constraintBottom_toTopOf="@id/password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password1" />

    <TextView
        android:id="@+id/lbl_password_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password_requirements"
        android:textColor="@color/grey_1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password2" />

    <ImageView
        android:id="@+id/ic_checked_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_default_not_checked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_password_info" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:text="@string/password_latin"
        android:textColor="@color/grey_1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_checked_1"
        app:layout_constraintStart_toEndOf="@id/ic_checked_1"
        app:layout_constraintTop_toTopOf="@id/ic_checked_1" />

    <ImageView
        android:id="@+id/ic_checked_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_default_not_checked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_checked_1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:text="@string/password_symbols_count"
        android:textColor="@color/grey_1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_checked_2"
        app:layout_constraintStart_toEndOf="@id/ic_checked_2"
        app:layout_constraintTop_toTopOf="@id/ic_checked_2" />

    <ImageView
        android:id="@+id/ic_checked_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_default_not_checked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_checked_2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:text="@string/password_capital_letter"
        android:textColor="@color/grey_1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_checked_3"
        app:layout_constraintStart_toEndOf="@id/ic_checked_3"
        app:layout_constraintTop_toTopOf="@id/ic_checked_3" />

    <ImageView
        android:id="@+id/ic_checked_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_default_not_checked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_checked_3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:text="@string/password_digit"
        android:textColor="@color/grey_1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_checked_4"
        app:layout_constraintStart_toEndOf="@id/ic_checked_4"
        app:layout_constraintTop_toTopOf="@id/ic_checked_4" />

    <Button
        android:id="@+id/btn_next"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:enabled="false"
        android:text="@string/complete"
        app:layout_constraintTop_toBottomOf="@id/ic_checked_4" />

    <ProgressBar
        android:id="@+id/pb_name_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:translationZ="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="@id/btn_next"
        app:layout_constraintStart_toStartOf="@id/btn_next"
        app:layout_constraintTop_toTopOf="@id/btn_next" />
</androidx.constraintlayout.widget.ConstraintLayout>